se añade css del header, se modifican articulos ahora clickeables en todo el div

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -43,7 +43,7 @@
                     <% selected.forEach(producto => { %>
                      
                     
-                    <article>
+                    <article onclick="location.href='/productDetail';" style="cursor: pointer;">
                         <img src=<%="/img/" +producto.img %> alt="producto" alt="producto">
                         <div class="productInfo">
                             <p class="final-value"><%= producto.valorFinal %></p>
@@ -84,7 +84,7 @@
         <section class="recomended">
             <h2>RECOMENDACIONES</h2>
             <div class="products">
-                <article>
+                <article onclick="location.href='/productDetail';" style="cursor: pointer;">
                     <img src="/img/asus.jpg" alt="producto">
                     <div class="productInfo">
                         <p class="final-value">$116.000</p>
@@ -94,7 +94,7 @@
                     </div>
                 </article>
 
-                <article>
+                <article onclick="location.href='/productDetail';" style="cursor: pointer;">
                     <img src="/img/lenovo.jpg" alt="producto">
                     <div class="productInfo">
                         <p class="final-value">$116.000</p>
@@ -104,7 +104,7 @@
                     </div>
                 </article>
 
-                <article>
+                <article onclick="location.href='/productDetail';" style="cursor: pointer;">
                     <img src="/img/hp.jpg" alt="producto">
                     <div class="productInfo">
                         <p class="final-value">$116.000</p>
@@ -114,7 +114,7 @@
                     </div>
                 </article>
 
-                <article>
+                <article onclick="location.href='/productDetail';" style="cursor: pointer;">
                     <img src="/img/bangho.jpg" alt="producto">
                     <div class="productInfo">
                         <p class="final-value">$116.000</p>
