--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,3 +1,6 @@
+<link rel="stylesheet" href="/css/header.css">
+
+
 <header>
     <div class="main-header-top-bar">
         <div class="top-header">
