--- a/public/css/index.css
+++ b/public/css/index.css
@@ -26,24 +26,23 @@ body {
     -webkit-text-stroke: 1px darkgreen;
 } */
 
-
-.top-header {
+/* .top-header {
     display: flex;
     width: 90vw;
-}
+} */
 
-.logo2 img {
+/* .logo2 img {
     height: 70px;
     margin-right: 40px;
-}
+} */
 
-.logo1 {
+/* .logo1 {
     display: none;
     height: 100px;
     position:relative
-}
+} */
 
-.search-bar {
+/* .search-bar {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -53,9 +52,9 @@ body {
     border-radius: 60px;
     padding: 10px 10px;
     margin: auto;
-}
+} */
 
-.search-bar input {
+/* .search-bar input {
     background-color: transparent;
     flex: 1;
     border: 0;
@@ -63,28 +62,28 @@ body {
     font-size: 12px;
     color: #cac7ff;
     padding: 5px
-}
+} */
 
-.search-bar input::placeholder {
+/* .search-bar input::placeholder {
     color: #cac7ff
-}
+} */
 
-.search-bar button i {
+/* .search-bar button i {
     font-size: 14px;
     color: #cac7ff
-}
+} */
 
-.search-bar button {
+/* .search-bar button {
     border: 0;
     border-radius: 50%;
     width: 25px;
     height: 25px;
     background-color: rgba(128, 255, 0, 0.7);
     cursor: pointer;
-}
+} */
 
 
-.main-header-top-bar {
+/* .main-header-top-bar {
     background-color: rgb(0, 0, 0);
     display: flex;
     flex-wrap: nowrap;
@@ -94,32 +93,31 @@ body {
     padding: 10px;
     width: 100%;
 
-}
+} */
 
-.icons-top-bar a {
+/* .icons-top-bar a {
     text-decoration: none;
     color: #7EFF00;
     font-size: 14px;
     align-items: center;
     padding: 10px
-}
+} */
 
-.icons-top-bar {
+/* .icons-top-bar {
     display: flex;
     align-items: baseline;
     width: 100%;
     justify-content: center;
     padding: 15px;
-}
+} */
 
-.icons-top-bar a i {
+/* .icons-top-bar a i {
     font-size: 18px;
 
-}
+} */
 
-.badge:after {
+/* .badge:after {
     content: attr(value);
-    /* value is the number displayed next to the cart */
     font-size: 10px;
     background: red;
     border-radius: 50%;
@@ -128,23 +126,23 @@ body {
     left: -4px;
     top: -16px;
     opacity: 0.9;
-}
+} */
 
 /* NAVIGATION BAR */
 
-.nav-bar {
+/* .nav-bar {
     display: flex;
     justify-content: space-around;
     display: none;
     box-shadow: 0rem 0.6rem 3rem 0.5rem #7EFF00;
-}
+} */
 
-.nav-bar a {
+/* .nav-bar a {
     text-decoration: none;
     color: #cac7ff;
-}
+} */
 
-.nav-bar-button {
+/* .nav-bar-button {
     background-color: #4A4A4A;
     padding: 10px;
     width: 110px;
@@ -152,16 +150,16 @@ body {
     margin: 5px 0;
     border-radius: 15px;
     transition: all 400ms ease;
-}
+} */
 
-.nav-bar-button:hover {
+/* .nav-bar-button:hover {
     color: #4A4A4A;
     background-color: #7EFF00;
-}
+} */
 
 
 /* BURGUER MENU */
-.burger-menu {
+/* .burger-menu {
     font-size: 1.5em;
     border-top: solid 1px #cac7ff;
     border-bottom: solid 1px #4c9800;
@@ -171,16 +169,17 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-}
+} */
 
-.burger-menu i {
+/* .burger-menu i {
     text-align: center;
     border-radius: 15%;
     border: solid 1px #7EFF00;
     padding: 10px;
     color: #7EFF00;
     margin-bottom: 15px;
-}
+} */
+
 
 /* BANNER SLIDER */
 
@@ -501,7 +500,7 @@ footer {
 
 @media (min-width: 767px) {
 
-    .logo2 img {
+    /* .logo2 img {
         display: none;
         height: 100px;
     }
@@ -549,7 +548,7 @@ footer {
 
     .nav-bar {
         display: flex
-    }
+    } */
 
     .banner img,
     #right,
@@ -561,9 +560,6 @@ footer {
         display: flex
     }
 
-    .burger-menu {
-        display: none;
-    }
 
     main {
         width: 95%
@@ -617,7 +613,7 @@ footer {
 
 @media (min-width: 1020px) {
 
-    .search-bar {
+    /* .search-bar {
         width: 60%;
         max-width: 700px;
     }
@@ -629,7 +625,7 @@ footer {
     .icons-top-bar {
 
         width: 40%;
-    }
+    } */
 
     /*FOOTER*/
 
