se arregla el link del logo para volver al index en todas las vistas

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -5,9 +5,9 @@
     <div class="main-header-top-bar">
         <div class="top-header">
             <!-- <a href="./" class="logo"> Pixel!</a> LOGO ALTERNATIVO-->
-            <a href="./" class="logo1"> <img src="/img/pixel-logo.png" alt="logo"></a>
+            <a onclick="location.href='/';" class="logo1"> <img src="/img/pixel-logo.png" alt="logo"></a>
             <!-- logo-mobile -->
-            <a href="./" class="logo2"> <img src="/img/logo-pixel-mobile.png" alt="logo"></a>
+            <a onclick="location.href='/';" class="logo2"> <img src="/img/logo-pixel-mobile.png" alt="logo"></a>
             <form action='https://www.google.com/search?q=' method="get" class="search-bar">
                 <input type="text" placeholder="Monitores, teclados, tarjetas de video" name="q">
                 <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
