Fondo img transparente

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -85,7 +85,7 @@
             <h2>RECOMENDACIONES</h2>
             <div class="products">
                 <article onclick="location.href='/productDetail';" style="cursor: pointer;">
-                    <img src="/img/asus.jpg" alt="producto">
+                    <img src="/img/asus.png" alt="producto">
                     <div class="productInfo">
                         <p class="final-value">$116.000</p>
                         <p class="price">$154.699</p>
@@ -95,7 +95,7 @@
                 </article>
 
                 <article onclick="location.href='/productDetail';" style="cursor: pointer;">
-                    <img src="/img/lenovo.jpg" alt="producto">
+                    <img src="/img/lenovo.png" alt="producto">
                     <div class="productInfo">
                         <p class="final-value">$116.000</p>
                         <p class="price">$154.699</p>
@@ -105,7 +105,7 @@
                 </article>
 
                 <article onclick="location.href='/productDetail';" style="cursor: pointer;">
-                    <img src="/img/hp.jpg" alt="producto">
+                    <img src="/img/hp.png" alt="producto">
                     <div class="productInfo">
                         <p class="final-value">$116.000</p>
                         <p class="price">$154.699</p>
@@ -115,7 +115,7 @@
                 </article>
 
                 <article onclick="location.href='/productDetail';" style="cursor: pointer;">
-                    <img src="/img/bangho.jpg" alt="producto">
+                    <img src="/img/bangho.png" alt="producto">
                     <div class="productInfo">
                         <p class="final-value">$116.000</p>
                         <p class="price">$154.699</p>
