--- a/src/views/productCart.ejs
+++ b/src/views/productCart.ejs
@@ -19,7 +19,7 @@
             <form action="/productCart" method="get" class="formulario-padre">
                 <section><p>Descripción</p><p class="p-precio">Precio</p><p>Cantidad de productos</p></section>
                 <div class="productInfo">
-                    <img src="/img/lenovo.jpg" alt="producto">
+                    <img src="/img/lenovo.png" alt="producto">
                     <p class="description">Laptop Lenovo</p>
                     <p class="price">$137.500</p>
                    
@@ -28,7 +28,7 @@
                 </div>
 
                 <div class="productInfo">
-                    <img src="/img/bangho.jpg" alt="producto">
+                    <img src="/img/bangho.png" alt="producto">
 
                     <p class="description">Laptop Bangho</p>
                     <p class="price">$145.999</p>
