--- a/src/views/productDetail.ejs
+++ b/src/views/productDetail.ejs
@@ -19,11 +19,11 @@
         <section class="main-container">
             <div class="images">
                 <div class="main-image">
-                    <img class="prod-image" src="img/hp.jpg" alt="img_hp">
+                    <img class="prod-image" src="img/hp.png" alt="img_hp">
                 </div>
                 <div class="container-views">
-                    <img class="view_prod" src="img/hp1.jpg" alt="img_hp1">
-                    <img class="view_prod" src="img/hp2.jpg" alt="img_hp2">
+                    <img class="view_prod" src="img/hp1.png" alt="img_hp1">
+                    <img class="view_prod" src="img/hp2.png" alt="img_hp2">
                     <img class="view_prod" src="img/hp3.png" alt="img_hp3">
                 </div>
             </div>
