--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -14,9 +14,9 @@
         </div>
         </form>
         <div class="icons-top-bar">
-            <a href="/login"><i class="fa-regular fa-user"></i> Ingresar</a>
-            <a href="/register">Registrarse</a>
-            <a href="/productCart"><i class="fa badge" style="font-size:24px" value=2>&#xf07a;</i></a>
+            <a href="/user/login"><i class="fa-regular fa-user"></i> Ingresar</a>
+            <a href="/user/register">Registrarse</a>
+            <a href="/user/productCart"><i class="fa badge" style="font-size:24px" value=2>&#xf07a;</i></a>
         </div>
     </div>
     <div class="burger-menu">
