--- a/public/css/productDetail.css
+++ b/public/css/productDetail.css
@@ -212,6 +212,7 @@ main {
     width:100%;
     margin-bottom: 10px;
     box-shadow: 0 0.2rem 0.5rem black;
+    background: linear-gradient(whitesmoke,#4A4A4A);
 }
 
 .images{
@@ -231,7 +232,7 @@ main {
 .view_prod{
     width:30%;
     box-shadow: 0 0.2rem 0.5rem black;
-
+    background: linear-gradient(whitesmoke,#4A4A4A);
 }
 
 
