--- a/src/views/productDetail.ejs
+++ b/src/views/productDetail.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="css/productDetail.css">
+    <link rel="stylesheet" href="../css/productDetail.css"> <!-- OJO SE LE PUSO ../ PREGUNTAR -->
     <title>Detalle Producto</title>
 </head>
 
@@ -19,12 +19,12 @@
         <section class="main-container">
             <div class="images">
                 <div class="main-image">
-                    <img class="prod-image" src="img/hp.png" alt="img_hp">
+                    <img class="prod-image" src="../img/hp.png" alt="img_hp">
                 </div>
                 <div class="container-views">
-                    <img class="view_prod" src="img/hp1.png" alt="img_hp1">
-                    <img class="view_prod" src="img/hp2.png" alt="img_hp2">
-                    <img class="view_prod" src="img/hp3.png" alt="img_hp3">
+                    <img class="view_prod" src="../img/hp1.png" alt="img_hp1">
+                    <img class="view_prod" src="../img/hp2.png" alt="img_hp2">
+                    <img class="view_prod" src="../img/hp3.png" alt="img_hp3">
                 </div>
             </div>
             <div class="text-options">
