--- a/public/css/index.css
+++ b/public/css/index.css
@@ -180,10 +180,151 @@ body {
     margin-bottom: 15px;
 } */
 
+/* NEW BANNER SLIDER */
 
-/* BANNER SLIDER */
+.banner {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    display:none;
+}
 
-.banner img {
+.item-slide img,
+.pagination-item img {
+    max-width: 100%;
+}
+
+.container-all {
+    position: relative;
+    /* max-width: 1000px; */
+    width: 100%;
+    /* border-radius: 6px; */
+    overflow: hidden;
+}
+
+.slide {
+    display: flex;
+    transform: translate3d(0, 0, 0);
+    transition: all 800ms;
+    animation-name: autoplay;
+    animation-duration: 30s;
+    animation-direction: alternate;
+    animation-fill-mode: forwards;
+    animation-iteration-count: infinite;
+}
+
+.item-slide {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 0;
+    flex-grow: 0;
+    max-width: 100%;
+}
+
+.pagination {
+    position: absolute;
+    bottom: 10px;
+    left: 0;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+.pagination-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid whitesmoke;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    overflow: hidden;
+    cursor: pointer;
+    background: rbga(255, 255, 255, 0.5);
+    margin: 0 10px;
+    text-align: center;
+    transition: all 300ms;
+
+}
+
+.pagination-item:hover {
+    transform: scale(1.8);
+}
+
+.pagination-item img {
+    display: inline-block;
+    max-width: none;
+    height: 100%;
+    transform: scale(1);
+    opacity: 0;
+    transition: all 300ms;
+}
+
+.pagination-item:hover img {
+    opacity: 1;
+    transform: scale(1);
+}
+
+input[id="1"]:checked~.slide {
+    animation: none;
+    transform: translate3d(0, 0, 0);
+
+}
+
+input[id="1"]:checked ~ .pagination .pagination-item[for="1"] {
+    background: rgba(128, 255, 0, 0.601);
+
+}
+
+input[id="2"]:checked~.slide {
+    animation: none;
+    transform: translate3d(calc(-100%*1), 0, 0);
+
+}
+
+input[id="2"]:checked ~ .pagination .pagination-item[for="2"] {
+    background: rgba(128, 255, 0, 0.601);
+
+}
+
+input[id="3"]:checked~.slide {
+    animation: none;
+    transform: translate3d(calc(-100%*2), 0, 0);
+
+}
+
+input[id="3"]:checked ~ .pagination .pagination-item[for="3"] {
+    background: rgba(128, 255, 0, 0.601);
+
+}
+
+@keyframes autoplay {
+    17%{
+        transform: translate3d(calc(-100%*0),0,0);
+    }
+    40%{
+        transform: translate3d(calc(-100%*1),0,0);
+    }
+    50%{
+        transform: translate3d(calc(-100%*1),0,0);
+    }
+    67%{
+        transform: translate3d(calc(-100%*1),0,0);
+    }
+    83%{
+        transform: translate3d(calc(-100%*2),0,0);
+    }
+    100%{
+        transform: translate3d(calc(-100%*2),0,0);
+    }
+}
+
+/* OLD BANNER SLIDER */
+
+/* .banner img {
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -251,7 +392,7 @@ body {
 
 #bn2{
     color: #cac7ff
-}
+} */
 
 
 /* MAIN */
@@ -273,11 +414,11 @@ main {
 }
 
 .products article {
-    display:flex;
+    display: flex;
     flex-direction: column;
     justify-content: flex-end;
     margin: 10px auto;
-    background: linear-gradient(whitesmoke , #4A4A4A 60%);
+    background: linear-gradient(whitesmoke, #4A4A4A 40%);
     box-shadow: 0 0.2rem 0.5rem rgba(202, 199, 255, 0.771);
     margin: 1rem 0;
     border-radius: 0.5rem;
@@ -285,6 +426,7 @@ main {
     cursor: pointer;
     border-top: #7EFF00 solid 3px;
     border-bottom: #7EFF00 solid 3px;
+    padding-bottom: 5px;
 
 }
 
@@ -297,21 +439,21 @@ main {
     margin-left: auto;
     margin-right: auto;
     width: 100%;
-    border-top-left-radius:0.5rem; 
+    border-top-left-radius: 0.5rem;
     border-top-right-radius: 0.5rem;
 
 
 }
 
-.discount{
+.discount {
     background-color: darkred;
     width: 50px;
-    color:whitesmoke;
+    color: whitesmoke;
     padding: 3px;
     border-radius: 5px;
     font-weight: bold;
     position: relative;
-    bottom:62px
+    bottom: 62px
 }
 
 .productName {
@@ -325,21 +467,24 @@ main {
     color: #7EFF00
 }
 
-.price{
-    color:#cac7ff;
+.price {
+    color: #cac7ff;
     font-size: 14px;
-    text-decoration:line-through 
+    text-decoration: line-through
 }
 
 
 .description {
-    font-size: 14px;
-    color: black;
+    font-size: 16px;
+    color: #cac7ff;
     font-weight: bold;
+    text-decoration: none;
+    padding-bottom: 20px;
+    transition: color 400ms ease;
 }
 
-.description:hover{
-    color:#7EFF00
+.description:hover {
+    color: #7EFF00
 }
 
 
@@ -375,7 +520,7 @@ main {
 
 footer {
     background-color: #000;
-    box-shadow: 3px 3px 30px 5px  #7EFF00;
+    box-shadow: 3px 3px 30px 5px #7EFF00;
 }
 
 .texto-redes {
@@ -553,7 +698,7 @@ footer {
         display: flex
     } */
 
-    .banner img,
+    /* .banner img,
     #right,
     #left {
         display: initial
@@ -561,8 +706,11 @@ footer {
 
     .dots {
         display: flex
-    }
+    } */
 
+    .banner{
+        display:flex
+    }
 
     main {
         width: 95%
@@ -600,15 +748,15 @@ footer {
     }
 
     .lista1 {
-        flex:3.33
+        flex: 3.33
     }
 
-    .lista2{
-        flex:3.33
+    .lista2 {
+        flex: 3.33
     }
 
     .lista3 {
-        flex:3.33
+        flex: 3.33
     }
 
 
