--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto:wght@300;400&display=swap');
 
 .top-header {
     display: flex;
