--- a/public/css/addProduct.css
+++ b/public/css/addProduct.css
@@ -3,7 +3,8 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box
+    box-sizing: border-box;
+    /* font-family: 'Lato', sans-serif; */
 }
 
 body {
