--- a/public/css/index.css
+++ b/public/css/index.css
@@ -3,10 +3,12 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box
+    box-sizing: border-box;
+    /* font-family: 'Lato', sans-serif; */
 }
 
 body {
+    
     font-family: 'Roboto', Arial;
     font-size: 12px;
     background-color: #080808;
@@ -196,9 +198,7 @@ body {
 
 .container-all {
     position: relative;
-    /* max-width: 1000px; */
     width: 100%;
-    /* border-radius: 6px; */
     overflow: hidden;
 }
 
