--- a/public/css/productCart.css
+++ b/public/css/productCart.css
@@ -4,20 +4,22 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box
+    box-sizing: border-box;
+    /* font-family: 'Lato', sans-serif; */
 }
 
 body {
-    font-family: 'Lato', sans-serif;
+    
+    font-family: 'Roboto', Arial;
     font-size: 12px;
-    background-color:black;
+    background-color: #080808;
 }
 
 
 /* HEADER TOP BAR */
 
 
-.top-header {
+/* .top-header {
     display: flex;
     width: 90vw;
 }
@@ -112,7 +114,6 @@ body {
 
 .badge:after {
     content: attr(value);
-    /* value is the number displayed next to the cart */
     font-size: 10px;
     background: red;
     border-radius: 50%;
@@ -121,11 +122,11 @@ body {
     left: -4px;
     top: -16px;
     opacity: 0.9;
-}
+} */
 
 /* NAVIGATION BAR */
 
-.nav-bar{
+/* .nav-bar{
     display:flex;
     justify-content: space-around;
     display: none;
@@ -150,11 +151,11 @@ body {
 .nav-bar-button:hover{
     color:#4A4A4A;
     background-color: #7EFF00;
-}
+} */
 
 
 /* BURGUER MENU */
-.burger-menu {
+/* .burger-menu {
     text-align: center;
     font-size: 1.5em;
     
@@ -168,7 +169,7 @@ body {
     padding: 10px;
     color: #7EFF00;
     margin-bottom: 15px
-}
+} */
 
 
  /* MAIN */
@@ -198,7 +199,7 @@ h2 {
     padding: 15px;
 }
 
-img {
+.productInfo img {
     width: 90%;
     padding: 5px;
     border-radius: 15px;
@@ -408,7 +409,7 @@ footer {
 }
 
 @media (min-width: 767px) {
-    .logo2 img {
+    /* .logo2 img {
         display: none;
         height: 100px;
     }
@@ -470,7 +471,8 @@ footer {
 
     .burger-menu {
         display: none;
-    }
+    } */
+
 section{
     display: flex;
     color: aliceblue;
@@ -564,10 +566,10 @@ section p{
         text-align: center;
         margin-top: 5px;
     }
-    .search-bar{
+    /* .search-bar{
         width:45%;
         max-width: 700px;
-    }
+    } */
 
     
     
