--- a/public/css/register.css
+++ b/public/css/register.css
@@ -1,18 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto:wght@300;400&display=swap');
+
 * {
     padding: 0;
     margin: 0;
-    font-family: 'Lato', sans-serif;
+    /* font-family: 'Lato', sans-serif; */
+    font-family: 'Roboto', Arial;
     box-sizing: border-box;
 }
 
 body {
-    min-width: 300px;
+    font-size: 12px;
+    background-color: #080808;
 }
 
 /*header*/
 /* HEADER TOP BAR */
 
-header {
+/* header {
     background-color: black;
 }
 
@@ -110,7 +114,6 @@ header {
 
 .badge:after {
     content: attr(value);
-    /* value is the number displayed next to the cart */
     font-size: 10px;
     background: red;
     border-radius: 50%;
@@ -119,11 +122,11 @@ header {
     left: -4px;
     top: -16px;
     opacity: 0.9;
-}
+} */
 
 /* NAVIGATION BAR */
 
-.nav-bar {
+/* .nav-bar {
     display: flex;
     justify-content: space-around;
     display: none;
@@ -149,11 +152,11 @@ header {
 .nav-bar-button:hover {
     color: #4A4A4A;
     background-color: #7EFF00;
-}
+} */
 
 
 /* BURGUER MENU */
-.burger-menu {
+/* .burger-menu {
     text-align: center;
     font-size: 1.5em;
     border-bottom: solid 1px #61a120;
@@ -168,7 +171,7 @@ header {
     padding: 10px;
     color: #7eff00;
     margin-bottom: 15px;
-}
+} */
 
 /* BANNER SLIDER */
 
