Generamos Objeto De Usuarios2

--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -43,7 +43,7 @@
                     </div>
 
                     <div>
-                        <input type="text" name="nombre-apellido" placeholder="Nombre y apellido" id="nombre-apellido"
+                        <input type="text" name="fullName" placeholder="Nombre y apellido" id="nombre-apellido"
                             required>
                     </div>
 
@@ -57,17 +57,17 @@
 
                     <div>
                         <h4 class="aclaracion">Fecha de nacimiento</h4>
-                        <input type="date" name="nacimiento" id="nacimiento" required>
+                        <input type="date" name="dateOfBirth" id="nacimiento" required>
                     </div>
 
                     <div>
-                        <input type="text" name="domicilio" placeholder="Domicilio" required>
+                        <input type="text" name="address" placeholder="Domicilio" required>
                     </div>
 
                     <div>
                         <h4 class="aclaracion">Foto de usuario</h4>
                         <div class="file-select">
-                            <input type="file" name="foto-user" accept=".png, .jpg">
+                            <input type="file" name="userImg" accept=".png, .jpg">
                         </div>
 
                         <div class="contraseña">
@@ -75,7 +75,7 @@
                         </div>
 
                         <div class="contraseña">
-                            <input class="password" type="password" name="re-password"
+                            <input class="password" type="password" name="passwordConfirm"
                                 placeholder="Confirmar contraseña" required>
                         </div>
 
